@@ -1,5 +1,9 @@
 2007-06-29  Brady Anderson <brady.anderson@gmail.com> 
 
+	changes for PhotoService
+
+2007-06-29  Brady Anderson <brady.anderson@gmail.com> 
+
 	added AvatarUpdated event
 
 2007-06-29  Brady Anderson <brady.anderson@gmail.com> 
